refactor: encapsulate team and score state